--- a/views/detailServices.ejs
+++ b/views/detailServices.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On-demand App</title>
+    <title>Zapzapp</title>
 
     <style>
         body {
@@ -151,6 +151,27 @@
             transform: translateY(-2px);
             box-shadow: 0 6px 12px rgba(0, 74, 148, 0.3);
         }
+        .btn-delete {
+            display: block;
+            width: 100%;
+            background-color: #004a94;
+            color: white;
+            text-align: center;
+            padding: 16px;
+            border-radius: 8px;
+            border: none;
+            font-size: 18px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.2s, transform 0.2s;
+            box-shadow: 0 4px 6px rgba(0, 74, 148, 0.2);
+        }
+
+        .btn-delete:hover {
+            background-color: #003870;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 74, 148, 0.3);
+        }
 
         .navbar {
             width: 100%;
@@ -293,15 +314,27 @@
                         </p>
                     </div>
 
-                    <form action="/orders/create" method="POST">
-    
-                        <input type="hidden" name="ServiceId" value="<%= service.id %>">
 
-                        <button type="submit" class="btn-order"
-                            onclick="return confirm('Apakah Anda yakin ingin memesan layanan <%= service.name %>?')">
-                            Pesan Sekarang
-                        </button>
-                    </form>
+                    <% if (user.role === "Customer") { %>
+                        <form action="/orders/create" method="POST">
+    
+                            <input type="hidden" name="ServiceId" value="<%= service.id %>">
+
+                            <button type="submit" class="btn-order"
+                                onclick="return confirm('Apakah Anda yakin ingin memesan layanan <%= service.name %>?')">
+                                Pesan Sekarang
+                            </button>
+                        </form>
+                    <% } else { %>
+
+                        <form action="/services/<%= service.id %>/delete" method="get">
+                            <button type="submit" class="btn-delete"
+                                onclick="return confirm('Apakah Anda yakin ingin menghapus layanan <%= service.name %>?')">
+                                Hapus Layanan
+                            </button>
+                        </form>
+
+                    <% } %>
                 </div>
 
             </div>
