--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On-demand App</title>
+    <title>Zapzapp</title>
 
     <style>
         body {
@@ -72,7 +72,12 @@
         .error-msg {
             color: red;
             font-size: 14px;
-            margin-bottom: 15px;
+            margin-bottom: 15px;color: #dc3545;
+            background-color: #ffe6e6;
+            padding: 10px;
+            border-radius: 4px;
+            margin-top: 15px;
+            border: 1px solid #ffcccc;
         }
     </style>
 </head>
@@ -80,18 +85,23 @@
     <div class="auth-card">
         <h2 class="auth-title">Login</h2>
         
-        <% if (error) { %>
-            <p class="error-msg"><%= error %></p>
+        <% if (locals.error) { %>
+            <div class="error-msg">
+                <% error = error.split(",") %>
+                <% error.forEach(el => { %>
+                    <p>⚠️ <%= el %></p>
+                <% }) %>
+            </div>
         <% } %>
 
         <form action="/login" method="POST">
             <div class="form-group">
                 <label class="form-label">Email</label>
-                <input type="email" name="email" class="form-input" required>
+                <input type="email" name="email" class="form-input">
             </div>
             <div class="form-group">
                 <label class="form-label">Password</label>
-                <input type="password" name="password" class="form-input" required>
+                <input type="password" name="password" class="form-input">
             </div>
             <button type="submit" class="btn-submit">Masuk</button>
         </form>
