--- a/views/partial/_navbar.ejs
+++ b/views/partial/_navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="navbar-content">
 
-        <a href="/" class="navbar-brand">On Demand App</a>
+        <a href="/" class="navbar-brand">Zapzapp</a>
 
         <div class="navbar-links">
             
